cleaned up figure captions and some labels

--- a/references.bib
+++ b/references.bib
@@ -364,7 +364,7 @@
    year = {2004},
    institution = {Dept. of Computer Science, University of Illinois},
    url = {http://msl.cs.uiuc.edu/~pcheng1/papers/rc04.pdf},
-   note = {},
+   note = {Unpublished.},
 }
 
 === From RI website ===
@@ -698,7 +698,6 @@
 === From Springer website ===
 @inbook{ferguson2007fielddstar,
    author = {Dave Ferguson and Anthony Stentz},
-   editor = {Sebastian Thrun and Rodney Brooks and Hugh Durrant-Whyte},
    title = {Field {D}*: An Interpolation-Based Path Planner and
       Replanner},
    booktitle = {Robotics Research: Results of the 12th International
@@ -1730,6 +1729,18 @@
    address = {Providence, USA},
    pages = {248-255},
 }
+
+=== Manual, from http://www.roboticsproceedings.org ===
+@inproceedings{murray2016onachip,
+   author = {Sean Murray and Will Floyd-Jones and Ying Qi
+      and Daniel Sorin and George Konidaris},
+   title = {Robot Motion Planning on a Chip},
+   booktitle = {Proceedings of Robotics: Science and Systems},
+   year = {2016},
+   address = {Ann Arbor, Michigan},
+   month = jun,
+   doi = {10.15607/RSS.2016.XII.004},
+} 
 
 === From sagepub (IJRR) ===
 @article{newmanbranicky1991cspacetransforms,
