--- a/thesis-ch02-roadmaps.tex
+++ b/thesis-ch02-roadmaps.tex
@@ -40,7 +40,11 @@ that are well-suited to motion planning for articulated robots.
 \begin{marginfigure}
    \centering
    \includegraphics{build/movers-problem-schwartz-sharir} %
-   \caption{The original mover's problem
+   \caption[The original mover's problem
+      entails finding a collision-free path for a geometric body
+      amongst obstacles,
+      or finding that no path exists.
+   ]{The original mover's problem
       \citep{schwartzsharir1983pianomovers1}
       entails finding a collision-free path for a geometric body
       amongst obstacles,
