--- a/thesis-ch06-family-appendix.tex
+++ b/thesis-ch06-family-appendix.tex
@@ -4,7 +4,24 @@
 \begin{figure}
    \centering
    \includegraphics[width=10.5cm]{build/family-suction-example-graph}
-   \caption{Family belief graph for the 2D example problem from
+   \caption[Family belief graph for the 2D example problem from
+      Figure~\ref{fig:family:example} in Chapter~\ref{chap:family}.
+      The underlying family consists of five sets:
+      $A$, $B$, $C$, $S_{12}$, and $S_{23}$.
+      Transitions between states are shown for indicators
+      $\mathbf{1}_A$,
+      $\mathbf{1}_B$,
+      and $\mathbf{1}_C$,
+      with solid lines
+      showing transitions in which the indicator returns True,
+      and dashed lines
+      showing transitions in which the indicator returns False.
+      Also shown is the distance function and optimal policy
+      for a query subset $S_u = S_{23}$,
+      with green beliefs as goal states.
+      Bolded edges
+      represent transitions on an optimal policy.
+   ]{Family belief graph for the 2D example problem from
       Figure~\ref{fig:family:example} in Chapter~\ref{chap:family}.
       The underlying family consists of five sets:
       $A$, $B$, $C$, $S_{12}$, and $S_{23}$.
