--- a/thesis-ch06-family-extra.tex
+++ b/thesis-ch06-family-extra.tex
@@ -74,13 +74,18 @@ See Fig.~\ref{fig:family:self-collision-example}.
 \begin{figure*}
    \centering   
    \includegraphics{build/family-sq-caching/pvxs}
-   \caption[]{LEMUR single-query results on several HERB problems,
+   \caption[LEMUR single-query results on several HERB problems,
+      all using baked calls.
+      Traces are LEMUR,
+      the family motion planner (no caching),
+      and the family motion planner with self-checked caching.
+   ]{LEMUR single-query results on several HERB problems,
       all using baked calls.
       Traces are LEMUR
       (\protect\tikz{\protect\draw[thick,black] (0,0) -- (0.15,0.15);}),
       the family motion planner (no caching)
       (\protect\tikz{\protect\draw[thick,blue] (0,0) -- (0.15,0.15);}),
-      or the family motion planner with self-checked caching
+      and the family motion planner with self-checked caching
       (\protect\tikz{\protect\draw[thick,green] (0,0) -- (0.15,0.15);}).}
 \end{figure*}
 
