--- a/thesis-ch07-conclusion.tex
+++ b/thesis-ch07-conclusion.tex
@@ -1077,8 +1077,7 @@ However, we discussed ways in Section~\ref{subsec:conclusion:infinite-stack}
 to represent this more naturally during the course of the search itself.
 This also opens the door to specialized motion planning hardware
 (e.g. GPUs and FPGAs) which can maintain roadmaps efficiently
-and in parallel.
-\cdnote{Add RSS roadmap cite!}
+and in parallel (e.g. \citep{murray2016onachip}).
 
 Importantly,
 performing lazy search over roadmaps enables the use of grounded
