add incremental partition function support as appendix

--- a/thesis-ch03-lazysp.tex
+++ b/thesis-ch03-lazysp.tex
@@ -1205,6 +1205,8 @@ the value $Z'_{xy}$ is infinite.
 One can also derive the inverse:
 given values $Z'$,
 calculate the values $Z$ if an edge were removed.
+A derivation of this formulation is given in
+Appendix~\ref{chap:appendix-partition}.
 
 This incremental formulation of (\ref{eqn:partitionfn})
 allows for the corresponding score $p(e)$ for edges
