--- a/thesis.tex
+++ b/thesis.tex
@@ -190,6 +190,7 @@ Copyright~\textcopyright~Christopher M. Dellin
 
 \appendix
 \include{thesis-ch03-lazysp-proofs}
+\include{thesis-ch03-lazysp-partition}
 \include{thesis-ch04-ibid-proofs}
 \include{thesis-ch05-lemur-appendix}
 \include{thesis-ch06-family-appendix}
