more structural work

--- a/thesis.tex
+++ b/thesis.tex
@@ -152,7 +152,8 @@
 
 \renewcommand{\maketitlehookd}{
 \begin{center}
-\vspace{0.4in}
+\vspace{0.3in}
+CMU-RI-TR-16-??\\
 The Robotics Institute\\
 Carnegie Mellon University\\
 Pittsburgh, PA 15213\\
@@ -162,7 +163,7 @@ Siddhartha Srinivasa, CMU RI (Chair)\\
 Anthony Stentz, CMU RI\\
 Maxim Likhachev, CMU RI\\
 Lydia Kavraki, Rice University\\
-\vspace{0.4in}
+\vspace{0.3in}
 \emph{Submitted in partial fulfillment of the requirements\\
 for the degree of Doctor of Philosophy.}\\ 
 \vspace{0.7in}
@@ -176,6 +177,7 @@ Copyright~\textcopyright~Christopher M. Dellin
 \maketitle
 
 \include{thesis-abstract}
+%\include{thesis-acknowledgements}
 
 \tableofcontents
 
