a couple refs fixes

--- a/references.bib
+++ b/references.bib
@@ -1323,14 +1323,6 @@
    year = {1994},
 }
 
-=== Manual, 155, (1-2), 93-146 ===
-@article{koenig2004lpastar,
-   author = {S. Koenig and M. Likhachev and D. Furcy},
-   title = {Lifelong Planning {A}*},
-   journal = {Artificial Intelligence Journal},
-   year = {2004},
-}
-
 === From dl.acm.org ===
 @inproceedings{koenig2002dstarlite,
    author = {Sven Koenig and Maxim Likhachev},
@@ -1345,6 +1337,19 @@
    acmid = {777167},
    publisher = {American Association for Artificial Intelligence},
    address = {Menlo Park, CA, USA},
+}
+
+=== From ScienceDirect ===
+@article{koenig2004lpastar,
+   author = {Sven Koenig and Maxim Likhachev and David Furcy},
+   title = {Lifelong Planning {A}*},
+   journal = {Artificial Intelligence},
+   year = {2004},
+   volume = {155},
+   number = {1},
+   pages = {93--146},
+   issn = {0004-3702},
+   doi = {http://dx.doi.org/10.1016/j.artint.2003.12.001},
 }
 
 === From citeseer ===
@@ -1691,8 +1696,8 @@
    address = {New York, NY, USA},
 }
 
-=== From Springer website (number=issue) ===
-﻿@article{luby1989bidijk,
+=== From Springer website ===
+@article{luby1989bidijk,
    author = {Luby, Michael and Ragde, Prabhakar},
    title = {A bidirectional shortest-path algorithm with good
       average-case behavior},
