--- a/thesis.tex
+++ b/thesis.tex
@@ -153,7 +153,7 @@
 \renewcommand{\maketitlehookd}{
 \begin{center}
 \vspace{0.3in}
-CMU-RI-TR-16-??\\
+CMU-RI-TR-16-53\\
 The Robotics Institute\\
 Carnegie Mellon University\\
 Pittsburgh, PA 15213\\
@@ -177,7 +177,7 @@ Copyright~\textcopyright~Christopher M. Dellin
 \maketitle
 
 \include{thesis-abstract}
-%\include{thesis-acknowledgements}
+\include{thesis-acknowledgements}
 
 \tableofcontents
 
