add some lessons learned

--- a/references.bib
+++ b/references.bib
@@ -1,4 +1,5 @@
 @string{icra = "{IEEE} International Conference on Robotics and Automation"}
+@string{iros = "{IEEE} International Conference on Intelligent Robots and Systems"}
 @string{rss = "Proceedings of Robotics: Science and Systems"}
 
 === From IEEE Xplore ===
@@ -7,8 +8,7 @@
       Amato, Nancy M.},
    title = {FIRM: Feedback controller-based information-state roadmap -
       A framework for motion planning under uncertainty},
-   booktitle = {Intelligent Robots and Systems (IROS), 2011 IEEE/RSJ
-      International Conference on},
+   booktitle = iros,
    year = {2011},
    month = sep,
    pages = {4284-4291},
@@ -76,7 +76,7 @@
    author = {R. Alterovitz and T. Sim\'{e}on and K. Goldberg},
    title = {The Stochastic Motion Roadmap: A Sampling Framework for
       Planning with Markov Motion Uncertainty},
-   booktitle = {Proceedings of Robotics: Science and Systems},
+   booktitle = rss,
    year = {2007},
    month = jun,
    address = {Atlanta, GA, USA},
@@ -87,8 +87,7 @@
    author = {O. Arslan and P. Tsiotras},
    title = {Use of relaxation methods in sampling-based algorithms for
       optimal motion planning},
-   booktitle = {Robotics and Automation (ICRA), 2013 IEEE International
-      Conference on},
+   booktitle = icra,
    year = {2013},
    pages = {2421-2428},
    doi = {10.1109/ICRA.2013.6630906},
@@ -103,10 +102,9 @@
       and Klingensmith, M. and Libby, J. and Tian Yu Liu
       and Pollard, N. and Pivtoraiko, M. and Valois, J.-S.
       and Zhu, R.},
-   booktitle = {Intelligent Robots and Systems (IROS), 2012 IEEE/RSJ
-      International Conference on},
    title = {An integrated system for autonomous robotics manipulation},
    year = {2012},
+   booktitle = iros,
    month = oct,
    pages = {2955-2962},
    doi = {10.1109/IROS.2012.6385888},
@@ -255,12 +253,29 @@
    title = {The Gaussian Sampling Strategy for Probabilistic Roadmap
       Planners},
    year = {1999},
-   booktitle = {Robotics and Automation, 1999. Proceedings. 1999 IEEE
-      International Conference on},
+   booktitle = icra,
    volume = {2},
    pages = {1018-1023 vol.2},
    doi = {10.1109/ROBOT.1999.772447},
    issn = {1050-4729},
+}
+
+=== From Springer ===
+@incollection{brandesetal2002graphml,
+   author = {Ulrik Brandes and Markus Eiglsperger and Ivan Herman
+      and Michael Himsolt and M. Scott Marshall},
+   editor = {Petra Mutzel and Michael J{\"u}nger and Sebastian Leipert},
+   title = {{GraphML} Progress Report: Structural Layer Proposal},
+   booktitle = {9th Int. Symp. Graph Drawing,
+      Vienna, Austria, September 23--26 2001, Revised Papers},
+   year = {2002},
+   month = feb,
+   publisher = {Springer},
+   address = {Berlin, Heidelberg},
+   pages = {501--512},
+   isbn = {978-3-540-45848-7},
+   doi = {10.1007/3-540-45848-4_59},
+   note = {Lecture Notes in Computer Science, Volume 2265},
 }
 
 @unpublished{branicky2002detvsprobroadmaps,
@@ -364,7 +379,7 @@
    year = {2004},
    institution = {Dept. of Computer Science, University of Illinois},
    url = {http://msl.cs.uiuc.edu/~pcheng1/papers/rc04.pdf},
-   note = {Unpublished.},
+   note = {Unpublished},
 }
 
 === From RI website ===
@@ -397,7 +412,7 @@
 @inproceedings{cohen2014narms,
    author = {Benjamin Cohen and Mike Phillips and Maxim Likhachev},
    title = {Planning Single-arm Manipulations with n-Arm Robots},
-   booktitle = {Proceedings of Robotics: Science and Systems},
+   booktitle = rss,
    year = {2014},
    address = {Berkeley, USA},
    month = jul,
@@ -473,7 +488,7 @@
    title = {Reduce, Reuse, Recycle:
       Exploiting {C-space} Structure in Similar Problems
       with Multi-Set Planning},
-   booktitle = {Robotics: Science and Systems},
+   booktitle = rss,
    year = {2015, in submission},
 }
 
@@ -508,7 +523,7 @@
    author = {Rosen Diankov and Nathan Ratliff and David Ferguson and
              Siddhartha Srinivasa and James Kuffner},
    title = {BiSpace Planning: Concurrent Multi-Space Exploration},
-   booktitle = {Robotics: Science and Systems},
+   booktitle = rss,
    month = jun,
    year = {2008},
 }
@@ -540,7 +555,7 @@
    author = {Mehmet Dogar and Siddhartha Srinivasa},
    editor = {Hugh Durrant-Whyte, Nick Roy and Pieter Abbeel},
    title = {A Framework for Push-grasping in Clutter},
-   booktitle = {Robotics: Science and Systems VII},
+   booktitle = rss,
    publisher = {MIT Press},
    month = jul,
    year = {2011},
@@ -625,8 +640,7 @@
 @inproceedings{erdmann1986multiplemoving,
    author = {Erdmann, M. and Lozano-Perez, T.},
    title = {On multiple moving objects},
-   booktitle = {Robotics and Automation. Proceedings. 1986 IEEE International
-      Conference on},
+   booktitle = icra,
    year = {1986},
    month = apr,
    volume = {3},
@@ -653,8 +667,7 @@
    author = {B. Faverjon},
    title = {Obstacle avoidance using an octree in the configuration
       space of a manipulator},
-   booktitle = {Robotics and Automation. Proceedings. 1984 IEEE
-      International Conference on},
+   booktitle = icra,
    year = {1984},
    month = mar,
    volume = {1},
@@ -792,8 +805,7 @@
       via direct sampling of an admissible ellipsoidal heuristic},
    year = {2014},
    month = sep,
-   booktitle = {2014 IEEE/RSJ International Conference on Intelligent
-      Robots and Systems},
+   booktitle = iros,
    pages = {2997 -- 3004},
    doi = {10.1109/IROS.2014.6942976},
    ISSN = {2153-0858},
@@ -825,8 +837,7 @@
 === From IEEE Xplore ===
 @inproceedings{gayle2007lazyreconfigforest,
    author  = {Gayle, Russell and Klingler, K.R. and Xavier, P.G.},
-   booktitle = {Robotics and Automation,
-      2007 IEEE International Conference on},
+   booktitle = icra,
    title = {Lazy Reconfiguration Forest (LRF) - An Approach for Motion
       Planning with Multiple Tasks in Dynamic Environments},
    year = {2007},
@@ -999,8 +1010,7 @@
 === From IEEE Xplore ===
 @inproceedings{hauser2015lazy,
    author = {Hauser, K.},
-   booktitle = {Robotics and Automation (ICRA), 2015 IEEE
-      International Conference on},
+   booktitle = icra,
    title = {Lazy collision checking in asymptotically-optimal motion
       planning},
    year = {2015},
@@ -1031,8 +1041,7 @@
 === From IEEE Xplore ===
 @inproceedings{hsu1997expansive,
    author = {Hsu, D. and Latombe, J.-C. and Motwani, R.},
-   booktitle = {Robotics and Automation, 1997. Proceedings of the
-      1997 IEEE International Conference on},
+   booktitle = icra,
    title = {Path planning in expansive configuration spaces},
    year = {1997},
    month = apr,
@@ -1062,8 +1071,7 @@
    author = {D. Hsu and G. Sanchez-Ante and Zheng Sun},
    title = {Hybrid PRM Sampling with a Cost-Sensitive Adaptive Strategy},
    year = {2005},
-   booktitle = {Proceedings of the 2005 IEEE International Conference
-      on Robotics and Automation},
+   booktitle = icra,
    pages = {3874 -- 3880},
    doi = {10.1109/ROBOT.2005.1570712},
    issn = {1050-4729},
@@ -1075,8 +1083,7 @@
    author = {Ichnowski, J. and Alterovitz, R.},
    title = {Parallel sampling-based motion planning with superlinear
       speedup},
-   booktitle = {Intelligent Robots and Systems (IROS), 2012 IEEE/RSJ
-      International Conference on},
+   booktitle = iros,
    year = {2012},
    month = oct,
    pages = {1206-1212},
@@ -1102,8 +1109,7 @@
 === From IEEE Xplore ===
 @inproceedings{jaillet2004dynamicprm,
    author = {Jaillet, L. and Sim\'{e}on, T.},
-   booktitle = {Intelligent Robots and Systems, 2004. (IROS 2004).
-      Proceedings. 2004 IEEE/RSJ International Conference on},
+   booktitle = iros,
    title = {A {PRM}-Based Motion Planner for Dynamically Changing
       Environments},
    year = {2004},
@@ -1157,8 +1163,7 @@
    author = {Jia Pan and Chitta, S. and Manocha, D.},
    title = {FCL: A general purpose library for collision and proximity
       queries},
-   booktitle = {Robotics and Automation (ICRA), 2012 IEEE International
-      Conference on},
+   booktitle = icra,
    year = {2012},
    month = may,
    pages = {3859-3866},
@@ -1229,7 +1234,7 @@
    author = {S. Karaman and E. Frazzoli},
    title = {Incremental Sampling-based Algorithms for Optimal Motion
       Planning},
-   booktitle = {Proceedings of Robotics: Science and Systems},
+   booktitle = rss,
    year = {2010},
    address = {Zaragoza, Spain},
    month = jun,
@@ -1278,8 +1283,7 @@
 
 @inproceedings{kavrakietal1996prmanalysis,
    author = {Kavraki, E.E. and Kolountzakis, M.N. and Latombe, J.-C.},
-   booktitle = {Robotics and Automation, 1996. Proceedings.,
-      1996 IEEE International Conference on},
+   booktitle = icra,
    title = {Analysis of probabilistic roadmaps for path planning},
    year = {1996},
    month = {Apr},
@@ -1431,8 +1435,7 @@
    author = {Kuwata, Y. and Fiore, G.A. and Teo, J. and Frazzoli, E.
       and How, J.P.},
    title = {Motion planning for urban driving using RRT},
-   booktitle = {Intelligent Robots and Systems, 2008. IROS 2008.
-      IEEE/RSJ International Conference on},
+   booktitle = iros,
    year = {2008},
    month = sep,
    pages = {1681-1686},
@@ -1500,8 +1503,7 @@
 @inproceedings{lavallekuffner1999rrt,
    author = {Steven M. LaValle and James J. Kuffner},
    title = {Randomized kinodynamic planning},
-   booktitle = {Robotics and Automation, 1999. Proceedings.
-      1999 IEEE International Conference on},
+   booktitle = icra,
    year = {1999},
    volume = {1},
    pages = {473--479},
@@ -1575,7 +1577,7 @@
 @inproceedings{lien2009similarobstacles,
    author = {J.-M. Lien AND Y. Lu},
    title = {Planning motion in environments with similar obstacles},
-   booktitle = {Proceedings of Robotics: Science and Systems},
+   booktitle = rss,
    year = {2009},
    address = {Seattle, USA},
    month = jun,
@@ -1664,8 +1666,7 @@
    author = {Lozano-Perez, T. and Jones, J. and Mazer, E.
       and O'Donnell, P. and Grimson, W. and Tournassoud, P.
       and Lanusse, A.},
-   booktitle = {Robotics and Automation. Proceedings.
-      1987 IEEE International Conference on},
+   booktitle = icra,
    title = {Handey: A robot system that recognizes, plans,
       and manipulates},
    year = {1987},
@@ -1740,7 +1741,7 @@
    author = {Sean Murray and Will Floyd-Jones and Ying Qi
       and Daniel Sorin and George Konidaris},
    title = {Robot Motion Planning on a Chip},
-   booktitle = {Proceedings of Robotics: Science and Systems},
+   booktitle = rss,
    year = {2016},
    address = {Ann Arbor, Michigan},
    month = jun,
@@ -1823,7 +1824,7 @@
       and Likhachev, Maxim},
    title = {E-Graphs: Bootstrapping Planning with Experience Graphs},
    year = {2012},
-   booktitle = {Robotics: Science and Systems},
+   booktitle = rss,
 }
 
 === From IEEE Xplore ===
@@ -1993,8 +1994,7 @@
    author = {E. Rimon and D. E. Koditschek},
    title = {The construction of analytic diffeomorphisms for exact
       robot navigation on star worlds},
-   booktitle = {Robotics and Automation, 1989. Proceedings., 1989 IEEE
-      International Conference on},
+   booktitle = icra,
    year = {1989},
    volume = {1},
    pages = {21--26},
@@ -2047,8 +2047,7 @@
       and DiPietro, D.},
    title = {Preliminary design of a whole-arm manipulation system
       (WAMS)},
-   booktitle = {Robotics and Automation, 1988. Proceedings.,
-      1988 IEEE International Conference on},
+   booktitle = icra,
    year = {1988},
    month = apr,
    pages = {254-260 vol.1},
@@ -2245,8 +2244,7 @@
 @inproceedings{starek2015bfmtstar,
    author = {J. A. Starek and J. V. Gomez and E. Schmerling
       and L. Janson and L. Moreno and M. Pavone},
-   booktitle = {Intelligent Robots and Systems (IROS),
-      2015 IEEE/RSJ International Conference on},
+   booktitle = iros,
    title = {An Asymptotically-Optimal Sampling-Based Algorithm for
       Bi-directional Motion Planning},
    year = {2015},
@@ -2260,8 +2258,7 @@
    author = {Anthony Stentz},
    title = {Optimal and Efficient Path Planning for Partially-Known
       Environments},
-   booktitle = {In Proceedings of the IEEE International Conference
-      on Robotics and Automation},
+   booktitle = icra,
    year = {1994},
    pages = {3310--3317},
 }
