--- a/thesis-ch02-roadmaps.tex
+++ b/thesis-ch02-roadmaps.tex
@@ -438,8 +438,7 @@ samples to their advantage
 (e.g. to address the narrow passage problem),
 such as visibility tests \citep{simeon2000visibilityprms}
 or the expansion phase of the original PRM
-\citep{kavrakietal1996prm}
-or the visibility test of the Visibili
+\citep{kavrakietal1996prm}.
 These heuristics can also be incorporated into sampling-based planners
 as obstacle-based \citep{boor1999prmgaussiansampling}
 or hybrid \citep{hsu2005hybridsampling} sampling strategies.
